feat: moved logic to services and other refacts